--- a/index.html
+++ b/index.html
@@ -44,7 +44,45 @@
 
             </div>
         </div>
+
     </body>
     </header>
+
+    <div class="section-one">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-content">
+                    <h1 class="inner-title">
+                        Antivirus
+                        <br/>
+                        Mask Store
+                    </h1>
+                    <p class="inner-desc">
+                        The easiest way to protect yourself
+                    </p>
+                    <div class="inner-list">
+                        <div class="inner-item">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Anti-Baterial</span>
+                        </div>
+                        <div class="inner-item">
+                            <i class="fa-solid fa-face-grin-stars"></i>
+                            <span>Anti-Virus</span>
+                        </div>    
+                    </div> 
+                    <a href="#" class="button button-two">Shop now</a>                               
+                  </div>  
+                  <div class="inner-image">
+                    <img src="assets/images/product1.jpg" alt="Anh khau trang"/>
+                    <div class="inner-sale">
+                        <span>only</span>
+                        <span>$25</span>
+                    </div>
+                </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
     
 </html>
