--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-    </body>
+   
     </header>
 
     <div class="section-one">
@@ -84,5 +84,43 @@
             </div>
         </div>
     </div>
+    <div class="section-two">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <img src="assets/images/image1.jpeg"/>
+                    <div class="inner-content">
+                        <div class="inner-tag">NEW</div>
+                        <div class="inner-title">
+                             Antivirus
+                             <br/>
+                             Mask</div>
+                        <a class="button button-one">More</a>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="assets/images/image2.jpg"/>
+                    <div class="inner-content">
+                        <div class="inner-title">Basic
+                            <br/> Mask</div>
+                        <div class="inner-sale">-30%</div>
+                        <a class="button button-one">Shop now</a>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="assets/images/image3.jpg"/>
+                    <div class="inner-content">
+                        <div class="inner-title">Medical 
+                            <br/>Mask</div>
+                        <div class="inner-price-new">$15,99</div>
+                        <div class="inner-price-old">$29,99</div>
+                        <a class="button button-one">Buy now</a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</body>
     
 </html>
