--- a/index.html
+++ b/index.html
@@ -121,6 +121,52 @@
             
         </div>
     </div>
+    <div class="section-three">
+        <div class="container">
+            <div class="box-head">
+                <h2 class="inner-title">
+                    Effective and reliable protection for your     
+                </h2>
+                <p class="inner-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </div>
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <i class="fa-solid fa-check"></i>
+                    <h3 class="inner-title">
+                        Anti-Virus
+                    </h3>
+                    <p class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing.
+                    </p>
+
+                </div>
+
+                <div class="inner-box">
+                    <i class="fa-solid fa-check"></i>
+                    <h3 class="inner-title">
+                        Anti-Bacterial
+                    </h3>
+                    <p class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing.
+                    </p>
+
+                </div>
+
+                <div class="inner-box">
+                    <i class="fa-solid fa-check"></i>
+                    <h3 class="inner-title">
+                        Safety
+                    </h3>
+                    <p class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing.
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
     
 </html>
