--- a/index.html
+++ b/index.html
@@ -167,6 +167,22 @@
             </div>
         </div>
     </div>
+<!-- section 4 -->
+    <div class="section-four">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-content">
+                    <h1 > Effective &<br/> reliable <br/> protection</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="button">About</div>
+                </div>
+                <div class="inner-image">
+                    <img src="assets/images/features1.jpg" alt="Anh 4">
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
     
 </html>
