--- a/index.html
+++ b/index.html
@@ -183,6 +183,21 @@
         </div>
 
     </div>
+<!-- section 5 -->
+<div class="section-five">
+    <div class="container">
+        <div class="inner-wrap">
+            <div class="inner-content">
+                <i class="fa-brands fa-facebook-messenger"></i>
+                <span>
+                    100% Secure delivery without contacting the courier</span>
+            </div>
+            <a href="#" class="button button-green">More</a>
+        </div>
+    </div>
+
+</div>
+
 </body>
     
 </html>
