Hoan Thien Lan 2

--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@
                 </div>
             </div>
             <div class="inner-input">
-                <p>Input</p>
+                
+                <form >
+                    <input type="text" id="fullName" name="full_name" placeholder="Enter your email address"/>
+                </form>
                 <span>Subscribe</span>
             </div>
         </div>
@@ -286,11 +289,13 @@
                 <h1>How can we<br/> help you?</h1>
                 <p>We are at your disposal 7 days a week!</p>
                </div>
-               <div class="inner-method">
+               <div class="inner-method add">
                 <h1>989-879-0847</h1>
                 <p>Monday – Friday: 9:00-20:00<br/>
                     Saturday: 11:00 – 15:00</p>
-                <span>contact@yoursite.com</span>
+               <a href="#" target="_blank">
+                <span> contact@yoursite.com</span>
+               </a>
                </div>
                <div class="inner-method">
                 <ul>
